# uml_examples

./: LICENSE.txt  README.md  pyproject.toml
src/uml_examples/: __about__.py  docs.md
src/uml_examples/class_diagram/aggregation/: aggregation.puml  aggregation.py
src/uml_examples/class_diagram/association/: association.puml  association.py
src/uml_examples/class_diagram/composition/: composition.puml  composition.py
src/uml_examples/class_diagram/dependency/: dependency.puml  dependency.py
src/uml_examples/class_diagram/generalization/: generalization.puml  generalization.py
src/uml_examples/class_diagram/realization/: realization.puml  realization.py
tests/: __init__.py
